<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OLAthonxa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="my_events">My Events</string>
    <string name="iam_invited">Events I am going</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event date</string>
    <string name="event_time">Event time</string>
    <string name="event_location">Event Location</string>
    <string name="show_location">Show Event</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="add">Add</string>

    <string-array name="vehicle_type_arrays">
        <item>Auto</item>
        <item>Cab</item>
        <item>Traveller</item>
    </string-array>

    <string name="capacity">Capacity</string>
    <string name="submit">Submit</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="save_your_pickup_location">Save your pickup location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="title_activity_select_pick_up_location">SelectPickUpLocationActivity</string>

</resources>
