<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextEventName"
            style="@style/textStyleEdiText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/event_name" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/editTextEventDate"
                style="@style/textStyleEdiText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/event_date"
                android:inputType="date"
                android:clickable="true"
                android:focusable="false"
                android:onClick="showDatePickerDialog" >
            </EditText>

            <EditText
                android:id="@+id/editTextEventTime"
                style="@style/textStyleEdiText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/event_time"
                android:inputType="date"
                android:clickable="true"
                android:focusable="false"
                android:onClick="showTimePickerDialog" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewEventLocation"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/event_location"
                style="@style/textStyleEdiText" >

            </AutoCompleteTextView>

        </LinearLayout>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/buttonAddEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</ScrollView>